# SlicerNeuroPlan

./: CMakeLists.txt
WorkspaceGeneration/: CMakeLists.txt
WorkspaceGeneration/Logic/: CMakeLists.txt  vtkSlicerWorkspaceGenerationLogic.cxx
WorkspaceGeneration/MRML/: vtkMRMLWorkspaceGenerationNode.h
workspace_mesh_gen/: CMakeLists.txt  workspace_mesh_gen.cxx  workspace_mesh_gen.hpp
